added swagger module, added get schema values support to common input filter class
