# src/Modules/src/Handler/CreateHandler.php
@@ -14,6 +14,7 @@ use Laminas\Diactoros\Response\JsonResponse;
 use Psr\Http\Message\ResponseInterface;
 use Psr\Http\Message\ServerRequestInterface;
 use Psr\Http\Server\RequestHandlerInterface;
+use OpenApi\Attributes as OA;
 
 #[Route(
     path: '/api/modules/create',
@@ -33,36 +34,38 @@ class CreateHandler implements RequestHandlerInterface
     ) 
     {
     }
-
-    /**
-     * @OA\Post(
-     *   path="/modules/create",
-     *   tags={"Modules"},
-     *   summary="Create a new module",
-     *   operationId="modules_create",
-     *
-     *   @OA\RequestBody(
-     *     description="Create a new role",
-     *     @OA\JsonContent(ref="#/components/schemas/ModuleSave"),
-     *   ),
-     *   @OA\Response(
-     *     response=200,
-     *     description="Successful operation",
-     *   ),
-     *   @OA\Response(
-     *      response=400,
-     *      description="Bad request, returns to validation errors"
-     *   )
-     *)
-     **/
+    
+    #[OA\Post(
+        path: '/modules/create',
+        operationId: 'modules_create',
+        summary: 'Create a new module',
+        tags: ['Modules'],
+        requestBody: new OA\RequestBody(
+            description: 'Create a new role',
+            content: new OA\JsonContent(ref: '#/components/schemas/ModuleSave'),
+        ),
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'Successful operation',
+            ),
+            new OA\Response(
+                response: 400,
+                description: 'Bad request, returns to validation errors'
+            )
+        ]
+    )]
     public function handle(ServerRequestInterface $request): ResponseInterface
     {
         $this->filter->setInputData($request->getParsedBody());
         $data = array();
         $response = array();
         if ($this->filter->isValid()) {
-            $this->dataManager->setInputFilter($this->filter);
-            $data = $this->dataManager->getSaveData(ModuleSave::class, 'modules');
+
+            $data = $this->filter->getSchemaValues(ModuleSave::class);
+
+            // $this->dataManager->setInputFilter($this->filter);
+            // $data = $this->dataManager->getSaveData(ModuleSave::class, 'modules');
             $this->moduleModel->create($data);
         } else {
             return new JsonResponse($this->error->getMessages($this->filter), 400);
