# src/Modules/src/Schema/ModuleUpdateResponseObject.php
@@ -2,31 +2,20 @@
 
 namespace Modules\Schema;
 
-/**
- * @OA\Schema()
- */
+use OpenApi\Attributes as OA;
+
+#[OA\Schema]
 class ModuleUpdateResponseObject
 {
-    /**
-     * @var string
-     * @OA\Property(
-     *     format="uuid"
-     * )
-     */
-    public $id;
-    /**
-     * @var string
-     * @OA\Property()
-     */
-    public $name;
-    /**
-     * @var string
-     * @OA\Property()
-     */
-    public $version;
-    /**
-     * @var integer
-     * @OA\Property()
-     */
-    public $isActive;
+    #[OA\Property(property: "id", format: 'uuid')]
+    public string $id;
+
+    #[OA\Property(property: "name", type: "string")]
+    public string $name;
+
+    #[OA\Property(property: "version", type: "string")]
+    public string $version;
+
+    #[OA\Property(property: "is_active", type: "integer")]
+    public int $isActive;
 }
